<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Organizer</string>
    <string name="add">Add</string>
    <string name="change_view">Change view</string>
    <string name="delete_all">Delete all</string>
    <string name="reset_all">Reset all</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="todo">To-do list</string>
    <string name="time_tracker">Time tracker</string>
    <string name="pull_to_add">Pull to add</string>
    <string name="title">Title</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cancel">Cancel</string>
    <string name="default_appointment_time_start" translatable="false">12:00</string>
    <string name="default_appointment_time_end" translatable="false">13:00</string>
    <string name="description">Description</string>
</resources>
