<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_toolbar_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <group
        android:id="@+id/main_toolbar_calendar_options"
        android:visible="false">
        <item
            android:id="@+id/main_toolbar_change_view"
            android:title="@string/change_view"
            android:enabled="false"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/main_toolbar_todo_options"
        android:visible="false">
        <item
            android:id="@+id/main_toolbar_delete_all_todos"
            android:title="@string/delete_all"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/main_toolbar_time_tracker_options"
        android:visible="false">
        <item
            android:id="@+id/main_toolbar_reset_all_chronographs"
            android:title="@string/reset_all"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/main_toolbar_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
