<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.fragment.calendar.AddAppointmentFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/appointment_title"
            android:hint="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/appointment_start"
            android:text="@string/from"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:paddingStart="3dp"
            android:paddingEnd="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/appointment_time_start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/appointment_time_start"
            app:layout_constraintBottom_toBottomOf="@+id/appointment_time_start" />

        <EditText
            android:text="@string/default_appointment_time_start"
            android:id="@+id/appointment_time_start"
            android:inputType="time"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appointment_title"
            app:layout_constraintLeft_toRightOf="@+id/appointment_start"
            app:layout_constraintRight_toLeftOf="@+id/appointment_date_start" />

        <EditText
            android:id="@+id/appointment_date_start"
            android:inputType="date"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appointment_title"
            app:layout_constraintLeft_toRightOf="@+id/appointment_time_start"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/appointment_end"
            android:text="@string/to"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:paddingStart="3dp"
            android:paddingEnd="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/appointment_time_end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/appointment_time_end" />

        <EditText
            android:text="@string/default_appointment_time_end"
            android:id="@+id/appointment_time_end"
            android:inputType="time"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appointment_time_start"
            app:layout_constraintLeft_toRightOf="@+id/appointment_end"
            app:layout_constraintRight_toLeftOf="@+id/appointment_date_end" />

        <EditText
            android:id="@+id/appointment_date_end"
            android:inputType="date"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appointment_date_start"
            app:layout_constraintLeft_toLeftOf="@+id/appointment_date_start"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/appointment_description"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appointment_time_end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="-1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/appointment_cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/appointment_add"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/appointment_description"
            android:layout_marginBottom="0dp"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/appointment_add"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/appointment_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/appointment_description"
            android:layout_marginBottom="0dp"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
